# LogChallenge

./: .ghci  .gitignore  LICENSE  LogParsing.cabal  Main.hs
src/LogChallenge/: ChallengeMain.hs  Counters.hs  Funnels.hs  Parsing.hs
test/LogChallenge/: CountersSpec.hs  ExampleData.hs  FunnelsSpec.hs  ParsingSpec.hs
